--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,10 +19,13 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 6.0.x
+        dotnet-version: 6.0.100
     - name: Restore dependencies
       run: dotnet restore
+      working-directory: ./02 - Getting Started/FirstProject
     - name: Build
       run: dotnet build --no-restore
+      working-directory: ./02 - Getting Started/FirstProject
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      working-directory: ./02 - Getting Started/FirstProject
